[gd_scene load_steps=11 format=3 uid="uid://cgt4lpvarkwvp"]

[ext_resource type="Script" uid="uid://bisdh0sv3iiha" path="res://Script/main_menu.gd" id="1_28flt"]
[ext_resource type="PackedScene" uid="uid://7nyt06yrvxoe" path="res://Scenes/options_menu.tscn" id="2_48xlc"]
[ext_resource type="Script" uid="uid://dnoas5254q5oj" path="res://Script/FotoPerfil.gd" id="3_1ehe0"]
[ext_resource type="StyleBox" uid="uid://cqavqai4uhmqs" path="res://ButtonTexture.tres" id="3_n45e2"]
[ext_resource type="Theme" uid="uid://cqoasn3fnuyo3" path="res://Font/PixelArtFont.tres" id="4_ce3w2"]
[ext_resource type="Texture2D" uid="uid://b1kf614xsm05c" path="res://Assets/PNG/bronce.tres" id="5_trj04"]
[ext_resource type="Texture2D" uid="uid://7di3qgibt0dx" path="res://Assets/PNG/plata.tres" id="6_16hvj"]
[ext_resource type="Texture2D" uid="uid://2j5cq7ixu6v0" path="res://Assets/PNG/menuFondo.tres" id="6_opfnp"]
[ext_resource type="Texture2D" uid="uid://1gvj5ac8am58" path="res://Assets/PNG/oro.tres" id="7_vr1f0"]
[ext_resource type="PackedScene" uid="uid://dp4miagyxxobr" path="res://Scenes/trophy_container.tscn" id="10_16hvj"]

[node name="MainMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28flt")

[node name="OptionsMenu" parent="." instance=ExtResource("2_48xlc")]
visible = false
layout_mode = 1
offset_left = -89.0
offset_top = -4.0
offset_right = -89.0
offset_bottom = -4.0
metadata/_edit_lock_ = true

[node name="OptionsQuit" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.065
anchor_top = 0.707
anchor_right = 0.27
anchor_bottom = 0.809
offset_left = 0.119995
offset_top = -0.136017
offset_right = -0.0400085
offset_bottom = -0.231995
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="OptionsButton" type="Button" parent="OptionsQuit"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_n45e2")
text = "Options"

[node name="QuitButton" type="Button" parent="OptionsQuit"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_n45e2")
text = "Quit"

[node name="PlayContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.076
anchor_top = 0.099
anchor_right = 0.245
anchor_bottom = 0.201
offset_left = -0.552002
offset_top = -0.152008
offset_right = -0.23999
offset_bottom = -0.248001
metadata/_edit_lock_ = true

[node name="PlayButton" type="Button" parent="PlayContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_n45e2")
text = "Play"

[node name="SelectDificulty" type="OptionButton" parent="PlayContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_ce3w2")
theme_override_styles/normal = ExtResource("3_n45e2")
item_count = 3
popup/item_0/text = "Bronce"
popup/item_0/icon = ExtResource("5_trj04")
popup/item_0/id = 0
popup/item_1/text = "Plata"
popup/item_1/icon = ExtResource("6_16hvj")
popup/item_1/id = 1
popup/item_2/text = "Oro"
popup/item_2/icon = ExtResource("7_vr1f0")
popup/item_2/id = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 360.0
one_shot = true

[node name="FotoPerfil" type="PanelContainer" parent="." node_paths=PackedStringArray("profile_pic", "change_button", "file_dialog")]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.787
anchor_top = 0.073
anchor_right = 0.939
anchor_bottom = 0.273
offset_left = 0.375916
offset_top = -0.304005
offset_right = 0.271973
offset_bottom = 0.095993
grow_horizontal = 0
script = ExtResource("3_1ehe0")
profile_pic = NodePath("VBoxContainer/TextureRect")
change_button = NodePath("VBoxContainer/Button")
file_dialog = NodePath("FileDialog")
metadata/_edit_lock_ = true

[node name="FileDialog" type="FileDialog" parent="FotoPerfil"]
access = 2
filters = PackedStringArray("*.png", "*.jpg , *.jpeg")

[node name="VBoxContainer" type="VBoxContainer" parent="FotoPerfil"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="FotoPerfil/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 4
stretch_mode = 5

[node name="Button" type="Button" parent="FotoPerfil/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("4_ce3w2")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = ExtResource("3_n45e2")
text = "Cambiar Foto"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.003
anchor_right = 1.0
anchor_bottom = 1.097
offset_left = -0.544
offset_bottom = 0.143982
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_opfnp")
metadata/_edit_lock_ = true

[node name="TrophyContainer" parent="." instance=ExtResource("10_16hvj")]
texture_filter = 1
layout_mode = 1
anchor_left = 0.823
anchor_top = 0.326
anchor_bottom = 0.877
offset_left = -0.0960083
offset_top = -0.248001
offset_bottom = -0.296021
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="OptionsQuit/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="OptionsQuit/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="PlayContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="item_selected" from="PlayContainer/SelectDificulty" to="." method="_on_select_dificulty_item_selected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
